# plus7

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: CI.yml
Libs/: CMakeLists.txt
Libs/ImGui/: CMakeLists.txt
Libs/ImGui-1.65/: imgui.h
Libs/SDL2/: CMakeLists.txt
Libs/fmtlib/: CMakeLists.txt
Libs/rx-ranges/: CMakeLists.txt  includes.patch
Plus7/: App.cpp  App.hpp  CMakeLists.txt  Module.hpp
Plus7/Core/: CMakeLists.txt
Plus7/Core/Include/Tasks/: Pipeline.hpp  Task.hpp  TaskDependencies.hpp  TaskID.hpp  TypedTask.hpp
Plus7/Core/Include/Utils/: Array.hpp  NonCopyable.hpp  ReverseIterator.hpp
Plus7/Core/Src/Tasks/: Pipeline.cpp
Plus7/Module/: Base.hpp  Graphic.cpp  Graphic.hpp
Plus7/Module/Graphic/: Graphic.hpp
Plus7/Module/Graphic/SdlGl/: SdlGlGraphic.cpp  SdlGlGraphic.hpp  SdlGlRenderer.cpp  SdlGlRenderer.hpp
Plus7/Modules/: CMakeLists.txt  ImGui.cpp  ImGui.hpp
Plus7/Modules/Gfx/: BlendProperties.hpp  BlendState.hpp  Buffer.hpp  BufferInterface.hpp  CMakeLists.txt  CommandBuffer.hpp  DepthState.hpp  Device.hpp  DeviceInterface.hpp  DummyCommandBuffer.hpp  DummyRenderer.cpp  DummyRenderer.hpp  RasterizerProperties.hpp  RasterizerState.hpp  Renderer.hpp  RendererInterface.hpp  ShaderState.hpp  Texture.hpp  TextureProperties.hpp  VertexLayout.hpp  VertexLayoutProperties.hpp
Plus7/Modules/Gfx/Dummy/: DummyBuffer.hpp  DummyCommandBuffer.hpp  DummyRenderer.cpp  DummyRenderer.hpp  DummyTexture.hpp  DummyVertexLayout.hpp
Plus7/Modules/Gfx/Include/: BlendState.hpp  Buffer.hpp  BufferProperties.hpp  CommandBuffer.hpp  DepthProperties.hpp  DepthState.hpp  RasterizerProperties.hpp  RasterizerState.hpp  Renderer.hpp  ShaderState.hpp  Texture.hpp  VertexLayout.hpp
Plus7/Modules/Gfx/Include/Dummy/: DummyBuffer.hpp  DummyCommandBuffer.hpp  DummyRenderer.hpp  DummyTexture.hpp  DummyVertexLayout.hpp
Plus7/Modules/Gfx/Include/SdlGl/: GlBlendState.hpp  GlBuffer.hpp  GlCommandBuffer.hpp  GlDepthState.hpp  GlRasterizerState.hpp  GlShaderState.hpp  GlTexture.hpp  GlVertexLayout.hpp  SdlGlRenderer.hpp  gl_headers.h  glad.h
Plus7/Modules/Gfx/SdlGl/: GlBlendState.cpp  GlBlendState.hpp  GlBuffer.cpp  GlBuffer.hpp  GlCommandBuffer.cpp  GlCommandBuffer.hpp  GlDepthState.cpp  GlDepthState.hpp  GlDevice.cpp  GlDevice.hpp  GlRasterizerState.cpp  GlRasterizerState.hpp  GlShaderState.cpp  GlShaderState.hpp  GlTexture.cpp  GlTexture.hpp  GlVertexLayout.cpp  GlVertexLayout.hpp  SdlGlRenderer.cpp  SdlGlRenderer.hpp  gl_headers.h  glad.c
Plus7/Modules/Gfx/Src/: DummyRenderer.cpp
Plus7/Modules/Gfx/Src/SdlGl/: GlBlendState.cpp  GlBuffer.cpp  GlCommandBuffer.cpp  GlDepthState.cpp  GlRasterizerState.cpp  GlShaderState.cpp  GlTexture.cpp  GlVertexLayout.cpp  SdlGlRenderer.cpp  glad.c
Plus7/Modules/ImGui/: CMakeLists.txt
Plus7/Modules/ImGui/Include/: ImGui.hpp
Plus7/Modules/ImGui/Src/: ImGui.cpp
Plus7/Modules/Inputs/: CMakeLists.txt  Inputs.hpp  KeyboardState.hpp  MouseWheelState.hpp
Plus7/Modules/Inputs/Include/: Inputs.hpp  KeyboardState.hpp
Plus7/Modules/Inputs/Include/Sdl/: SdlKeyboard.hpp  SdlMouse.hpp
Plus7/Modules/Inputs/Sdl/: SdlKeyboard.cpp  SdlKeyboard.hpp  SdlMouse.cpp  SdlMouse.hpp
Plus7/Modules/Inputs/Src/Sdl/: SdlKeyboard.cpp  SdlMouse.cpp
Plus7/Modules/Sdl/: SdlApp.cpp  SdlApp.hpp
Plus7/Modules/SdlApp/: CMakeLists.txt
Plus7/Modules/SdlApp/Include/: SdlApp.hpp
Plus7/Modules/SdlApp/Src/: SdlApp.cpp
Plus7/Tasks/: Pipeline.cpp  Pipeline.hpp  Task.hpp  TaskDependencies.hpp  TaskID.hpp  TypedTask.hpp
Plus7/Utils/: Assert.hpp
Samples/: CMakeLists.txt  HelloWorld.cpp
plus7/: App.cpp  App.hpp  CMakeLists.txt
plus7/utils/: NonCopyable.hpp
samples/: CMakeLists.txt
src/utils/: NonCopyable.hpp
